2000-04-14  Chris Toshok  <toshok@helixcode.com>

	* providers/nntp/camel-nntp-folder.c (_exists): always return TRUE
	for now.  we need to check the server response to make sure the
	group exists.
	(_get_message_by_uid): make sure to account for the \n we add to
	the string after every line.

	* providers/nntp/camel-nntp-utils.c (get_XOVER_headers): function
	to get the headers using the XOVER command.
	(get_HEAD_headers): function to get the headers using the HEAD
	command on each message. slooooooow.
	(camel_nntp_get_headers): make this function use either XOVER or HEAD
	versions depending on whether or not the server extension is present.

2000-04-14  Dan Winship  <danw@helixcode.com>

	* camel-formatter.[ch]: This didn't belong in Camel. Move to mail/

	* Makefile.am, camel-types.h: remove references to
	camel-formatter.

2000-04-12  Matt Loper  <matt@helixcode.com>

	* camel-folder-pt-proxy.c (_folder_open_cb): Print warning message
	for broken function.
	(_folder_close_cb): Same.

2000-04-12  Miguel de Icaza  <miguel@gnu.org>

	* Makefile.am (pthread_SRC): Use correct names for the pthread
	source variables.

2000-04-10  Dan Winship  <danw@helixcode.com>

	* providers/pop3/camel-pop3-store.c (pop3_connect): fix various
	bugs in APOP code (still untested) and some of the error cases.

	* camel-provider.h: Clarify what provider.protocol, provider.name,
	and provider.description should be.

	* providers/mbox/camel-mbox-provider.c: 
	* providers/pop3/camel-pop3-provider.c: 
	* providers/sendmail/camel-sendmail-provider.c: 
	* providers/smtp/camel-smtp-provider.c: update protocols, names,
	and descriptions

	* providers/mbox/camel-mbox-folder.c (_get_message_by_number):
	implement get_message_by_number for the mail fetch code.

2000-04-09  Jeffrey Stedfast  <fejj@stampede.org>

	* providers/smtp/camel-smtp-transport.c: reformatted to fit
	the standard indent format used by helix code

2000-04-09  Dan Winship  <danw@helixcode.com>
