@@ -1,3 +1,7 @@
+2000-04-14  Christopher James Lahey  <clahey@helixcode.com>
+
+	* providers/mbox/camel-mbox-folder.c: Fix switch statement.
+
 2000-04-14  Chris Toshok  <toshok@helixcode.com>
 
 	* providers/nntp/camel-nntp-folder.c (_exists): always return TRUE
